# PipeDream

./: .gitignore  LICENSE  README.md  pyproject.toml
games/: mock_game.py
src/pipedream/: cache.py  director.py  engine.py  gui.py  navigator.py  viewer.py
src/pipedream/games/: mock_game.py
src/pipedream/ui/: main.qml
