[project]
name = "pipedream"
version = "0.1.0"
description = "Real-time generative visualization for interactive fiction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pexpect>=4.9.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipedream"]
